# time2relax-python-driver

./: .coveragerc  .editorconfig  .gitignore  .isort.cfg  .travis.yml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  conftest.py  prospector.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-package.yml
docs/: Makefile  README.md  alpha.rst  api.rst  conf.py  contributing.rst  history.rst  index.rst  installation.rst  interface.rst  make.bat  pre-1.0.rst  readme.rst  shields.rst  updates.rst  usage.rst
src/time2relax/: __init__.py  exceptions.py  models.py  time2relax.py  utils.py
tests/: test_clients.py  test_database.py  test_errors.py  test_models.py  test_response.py  test_server.py  test_time2relax.py  test_timetorelax.py  test_utils.py
tests/fixtures/: config.yml
tests/integration/: test_all_docs.py  test_bulk_docs.py  test_compact.py  test_couchdb.py  test_create.py  test_ddoc_list.py  test_ddoc_show.py  test_destroy.py  test_get.py  test_get_att.py  test_info.py  test_insert.py  test_insert_att.py  test_integration_all_docs.py  test_integration_bulk_docs.py  test_integration_compact.py  test_integration_couchdb.py  test_integration_create.py  test_integration_ddoc_list.py  test_integration_ddoc_show.py  test_integration_ddoc_view.py  (+14 more)
time2relax/: __init__.py  __version__.py  clients.py  compat.py  errors.py  exceptions.py  models.py  time2relax.py  utils.py
(+62 files in other folders)
