[tool.poetry]
name = "time2relax"
version = "0.7.0"
description = "A CouchDB driver for Python."
authors = ["Raymond Wanyoike <raymond.wanyoike@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rwanyoike/time2relax-python-driver"
documentation = "https://github.com/rwanyoike/time2relax-python-driver/tree/main/docs"
packages = [{ include = "time2relax", from = "src" }]
include = ["HISTORY.md"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
